undo action now working for elimination. Only Message not showing up
