# swagger.yaml
@@ -35,6 +35,23 @@ paths:
       responses:
         '200':
           description: successful operation
+  '/debug/{id}/display':
+    get:
+      tags:
+        - Debug
+      summary: Get a specific game by id (not stripped with full data)
+      parameters:
+        - $ref: '#/components/parameters/GameID'
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/Base'
+        "404":
+          description: game with id not found
   '/game':
     get:
       tags:
